# sent

./: .gitignore  Makefile  README.org  arg.h  config.def.h  config.mk  drw.c  drw.h  meson.build  sent.c  util.h
src/: drw.c  sent.c  utf8.c  utf8.h  util.h
